Fixed cutting off top of interactives

--- a/style.css
+++ b/style.css
@@ -1363,10 +1363,10 @@ p:first-child {
 
 .interactivepiece {
   width: 75%;
-  height: 100vh;
+  height: calc(100vh - 95px);
   position: -webkit-sticky; /* Safari */
   position: sticky;
-  top: 0;
+  top: 95px;
 }
 
 .interactiveTong{
